Practica Sabados/.metadata/.plugins/org.eclipse.cdt.ui/Structs_practica.build.log
18:14:06 **** Incremental Build of configuration Debug for project Structs_practica ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Structs_practica.o" "..\\src\\Structs_practica.c" 
..\src\Structs_practica.c: In function 'main':
..\src\Structs_practica.c:19:14: error: incompatible type for argument 1 of 'cargarDatos'
   19 |  cargarDatos(cargaDatos,TAM);
      |              ^~~~~~~~~~
      |              |
      |              datosEmpleados * {aka struct <anonymous> *}
In file included from ..\src\Structs_practica.c:12:
..\src\empleados_struct.h:26:33: note: expected 'datosEmpleados' {aka 'struct <anonymous>'} but argument is of type 'datosEmpleados *' {aka 'struct <anonymous> *'}
   26 | void cargarDatos(datosEmpleados ingresarDatos, int tam);
      |                  ~~~~~~~~~~~~~~~^~~~~~~~~~~~~

18:14:06 Build Failed. 1 errors, 0 warnings. (took 146ms)

